--- a/static/style.css
+++ b/static/style.css
@@ -3,23 +3,23 @@ html, body {
   margin: 0;
 }
 
+.col-center {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .stateBox {
   padding-top: 30px;
+}
+
+.leftbar {
+  padding: 15px 0;
 }
 
 .currentBox {
   background: #f1f1f1;
   padding-top: 20px;
   padding-bottom: 20px;
-}
-
-.controller {
-  width: 30%;
-  margin-left: 14%;
-  text-align: center;
-  float: left;
-  margin-top: 5%;
-
 }
 
 .button {
