--- a/static/style.css
+++ b/static/style.css
@@ -30,3 +30,20 @@ html, body {
 .highlight {
   background: #666;
 }
+
+.name {
+  padding: 5px;
+}
+
+.person {
+  border-top: 1px #ccc solid;
+  margin: 5px 0 0;
+  padding: 5px;
+}
+
+.peopleCount {
+  border-top: 1px #ccc solid;
+  font-size: 0.8em;
+  padding: 5px;
+  text-align: right;
+}
